frontend/ViperLang/ViperLangParser.cpp

// Generated from ViperLang.g4 by ANTLR 4.13.2


#include "ViperLangListener.h"
#include "ViperLangVisitor.h"

#include "ViperLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ViperLangParserStaticData final {
  ViperLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ViperLangParserStaticData(const ViperLangParserStaticData&) = delete;
  ViperLangParserStaticData(ViperLangParserStaticData&&) = delete;
  ViperLangParserStaticData& operator=(const ViperLangParserStaticData&) = delete;
  ViperLangParserStaticData& operator=(ViperLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag viperlangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<ViperLangParserStaticData> viperlangParserStaticData = nullptr;

void viperlangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (viperlangParserStaticData != nullptr) {
    return;
  }
#else
  assert(viperlangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ViperLangParserStaticData>(
    std::vector<std::string>{
      "program", "function_definition", "variable_declaration", "statement", 
      "assigment_expression", "call_expression", "expression", "if_statement", 
      "condition_expression", "for_statement"
    },
    std::vector<std::string>{
      "", "'function'", "'('", "','", "')'", "'end'", "'int'", "'uint'", 
      "'['", "']'", "'*'", "';'", "'='", "'/'", "'+'", "'-'", "'if'", "'and'", 
      "'or'", "'<'", "'>'", "'for'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "NAME", "INT", "STATEMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  viperlangParserStaticData = std::move(staticData);
}

}

ViperLangParser::ViperLangParser(TokenStream *input) : ViperLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ViperLangParser::ViperLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ViperLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *viperlangParserStaticData->atn, viperlangParserStaticData->decisionToDFA, viperlangParserStaticData->sharedContextCache, options);
}

ViperLangParser::~ViperLangParser() {
  delete _interpreter;
}

const atn::ATN& ViperLangParser::getATN() const {
  return *viperlangParserStaticData->atn;
}

std::string ViperLangParser::getGrammarFileName() const {
  return "ViperLang.g4";
}

const std::vector<std::string>& ViperLangParser::getRuleNames() const {
  return viperlangParserStaticData->ruleNames;
}

const dfa::Vocabulary& ViperLangParser::getVocabulary() const {
  return viperlangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ViperLangParser::getSerializedATN() const {
  return viperlangParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ViperLangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ViperLangParser::Function_definitionContext *> ViperLangParser::ProgramContext::function_definition() {
  return getRuleContexts<ViperLangParser::Function_definitionContext>();
}

ViperLangParser::Function_definitionContext* ViperLangParser::ProgramContext::function_definition(size_t i) {
  return getRuleContext<ViperLangParser::Function_definitionContext>(i);
}


size_t ViperLangParser::ProgramContext::getRuleIndex() const {
  return ViperLangParser::RuleProgram;
}

void ViperLangParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ViperLangParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any ViperLangParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ViperLangParser::ProgramContext* ViperLangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ViperLangParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(21); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(20);
      function_definition();
      setState(23); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ViperLangParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_definitionContext ------------------------------------------------------------------

ViperLangParser::Function_definitionContext::Function_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ViperLangParser::Function_definitionContext::NAME() {
  return getToken(ViperLangParser::NAME, 0);
}

std::vector<ViperLangParser::Variable_declarationContext *> ViperLangParser::Function_definitionContext::variable_declaration() {
  return getRuleContexts<ViperLangParser::Variable_declarationContext>();
}

ViperLangParser::Variable_declarationContext* ViperLangParser::Function_definitionContext::variable_declaration(size_t i) {
  return getRuleContext<ViperLangParser::Variable_declarationContext>(i);
}

std::vector<ViperLangParser::StatementContext *> ViperLangParser::Function_definitionContext::statement() {
  return getRuleContexts<ViperLangParser::StatementContext>();
}

ViperLangParser::StatementContext* ViperLangParser::Function_definitionContext::statement(size_t i) {
  return getRuleContext<ViperLangParser::StatementContext>(i);
}


size_t ViperLangParser::Function_definitionContext::getRuleIndex() const {
  return ViperLangParser::RuleFunction_definition;
}

void ViperLangParser::Function_definitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_definition(this);
}

void ViperLangParser::Function_definitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_definition(this);
}


std::any ViperLangParser::Function_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitFunction_definition(this);
  else
    return visitor->visitChildren(this);
}

ViperLangParser::Function_definitionContext* ViperLangParser::function_definition() {
  Function_definitionContext *_localctx = _tracker.createInstance<Function_definitionContext>(_ctx, getState());
  enterRule(_localctx, 2, ViperLangParser::RuleFunction_definition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    match(ViperLangParser::T__0);
    setState(26);
    match(ViperLangParser::NAME);
    setState(27);
    match(ViperLangParser::T__1);
    setState(29);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ViperLangParser::T__5

    || _la == ViperLangParser::T__6) {
      setState(28);
      variable_declaration();
    }
    setState(35);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ViperLangParser::T__2) {
      setState(31);
      match(ViperLangParser::T__2);
      setState(32);
      variable_declaration();
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(38);
    match(ViperLangParser::T__3);
    setState(42);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 6356992) != 0)) {
      setState(39);
      statement();
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(45);
    match(ViperLangParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_declarationContext ------------------------------------------------------------------

ViperLangParser::Variable_declarationContext::Variable_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ViperLangParser::Variable_declarationContext::NAME() {
  return getToken(ViperLangParser::NAME, 0);
}

tree::TerminalNode* ViperLangParser::Variable_declarationContext::INT() {
  return getToken(ViperLangParser::INT, 0);
}


size_t ViperLangParser::Variable_declarationContext::getRuleIndex() const {
  return ViperLangParser::RuleVariable_declaration;
}

void ViperLangParser::Variable_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable_declaration(this);
}

void ViperLangParser::Variable_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable_declaration(this);
}


std::any ViperLangParser::Variable_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitVariable_declaration(this);
  else
    return visitor->visitChildren(this);
}

ViperLangParser::Variable_declarationContext* ViperLangParser::variable_declaration() {
  Variable_declarationContext *_localctx = _tracker.createInstance<Variable_declarationContext>(_ctx, getState());
  enterRule(_localctx, 4, ViperLangParser::RuleVariable_declaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(57);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(47);
      _la = _input->LA(1);
      if (!(_la == ViperLangParser::T__5

      || _la == ViperLangParser::T__6)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(48);
      match(ViperLangParser::NAME);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(49);
      _la = _input->LA(1);
      if (!(_la == ViperLangParser::T__5

      || _la == ViperLangParser::T__6)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(50);
      match(ViperLangParser::NAME);
      setState(51);
      match(ViperLangParser::T__7);
      setState(52);
      match(ViperLangParser::INT);
      setState(53);
      match(ViperLangParser::T__8);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(54);
      _la = _input->LA(1);
      if (!(_la == ViperLangParser::T__5

      || _la == ViperLangParser::T__6)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(55);
      match(ViperLangParser::T__9);
      setState(56);
      match(ViperLangParser::NAME);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ViperLangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ViperLangParser::Assigment_expressionContext* ViperLangParser::StatementContext::assigment_expression() {
  return getRuleContext<ViperLangParser::Assigment_expressionContext>(0);
}

ViperLangParser::Call_expressionContext* ViperLangParser::StatementContext::call_expression() {
  return getRuleContext<ViperLangParser::Call_expressionContext>(0);
}

ViperLangParser::If_statementContext* ViperLangParser::StatementContext::if_statement() {
  return getRuleContext<ViperLangParser::If_statementContext>(0);
}

ViperLangParser::For_statementContext* ViperLangParser::StatementContext::for_statement() {
  return getRuleContext<ViperLangParser::For_statementContext>(0);
}


size_t ViperLangParser::StatementContext::getRuleIndex() const {
  return ViperLangParser::RuleStatement;
}

void ViperLangParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void ViperLangParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any ViperLangParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

ViperLangParser::StatementContext* ViperLangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, ViperLangParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(67);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(59);
      assigment_expression();
      setState(60);
      match(ViperLangParser::T__10);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(62);
      call_expression();
      setState(63);
      match(ViperLangParser::T__10);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(65);
      if_statement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(66);
      for_statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assigment_expressionContext ------------------------------------------------------------------

ViperLangParser::Assigment_expressionContext::Assigment_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ViperLangParser::Assigment_expressionContext::NAME() {
  return getToken(ViperLangParser::NAME, 0);
}

std::vector<ViperLangParser::ExpressionContext *> ViperLangParser::Assigment_expressionContext::expression() {
  return getRuleContexts<ViperLangParser::ExpressionContext>();
}

ViperLangParser::ExpressionContext* ViperLangParser::Assigment_expressionContext::expression(size_t i) {
  return getRuleContext<ViperLangParser::ExpressionContext>(i);
}


size_t ViperLangParser::Assigment_expressionContext::getRuleIndex() const {
  return ViperLangParser::RuleAssigment_expression;
}

void ViperLangParser::Assigment_expressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssigment_expression(this);
}

void ViperLangParser::Assigment_expressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssigment_expression(this);
}


std::any ViperLangParser::Assigment_expressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitAssigment_expression(this);
  else
    return visitor->visitChildren(this);
}

ViperLangParser::Assigment_expressionContext* ViperLangParser::assigment_expression() {
  Assigment_expressionContext *_localctx = _tracker.createInstance<Assigment_expressionContext>(_ctx, getState());
  enterRule(_localctx, 8, ViperLangParser::RuleAssigment_expression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(69);
      match(ViperLangParser::NAME);
      setState(70);
      match(ViperLangParser::T__11);
      setState(71);
      expression(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(72);
      match(ViperLangParser::NAME);
      setState(73);
      match(ViperLangParser::T__7);
      setState(74);
      expression(0);
      setState(75);
      match(ViperLangParser::T__8);
      setState(76);
      match(ViperLangParser::T__11);
      setState(77);
      expression(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Call_expressionContext ------------------------------------------------------------------

ViperLangParser::Call_expressionContext::Call_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ViperLangParser::Call_expressionContext::NAME() {
  return getToken(ViperLangParser::NAME, 0);
}

std::vector<ViperLangParser::ExpressionContext *> ViperLangParser::Call_expressionContext::expression() {
  return getRuleContexts<ViperLangParser::ExpressionContext>();
}

ViperLangParser::ExpressionContext* ViperLangParser::Call_expressionContext::expression(size_t i) {
  return getRuleContext<ViperLangParser::ExpressionContext>(i);
}


size_t ViperLangParser::Call_expressionContext::getRuleIndex() const {
  return ViperLangParser::RuleCall_expression;
}

void ViperLangParser::Call_expressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCall_expression(this);
}

void ViperLangParser::Call_expressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCall_expression(this);
}


std::any ViperLangParser::Call_expressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitCall_expression(this);
  else
    return visitor->visitChildren(this);
}

ViperLangParser::Call_expressionContext* ViperLangParser::call_expression() {
  Call_expressionContext *_localctx = _tracker.createInstance<Call_expressionContext>(_ctx, getState());
  enterRule(_localctx, 10, ViperLangParser::RuleCall_expression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(ViperLangParser::NAME);
    setState(82);
    match(ViperLangParser::T__1);
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ViperLangParser::NAME

    || _la == ViperLangParser::INT) {
      setState(83);
      expression(0);
    }
    setState(90);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ViperLangParser::T__2) {
      setState(86);
      match(ViperLangParser::T__2);
      setState(87);
      expression(0);
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(93);
    match(ViperLangParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

ViperLangParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ViperLangParser::Call_expressionContext* ViperLangParser::ExpressionContext::call_expression() {
  return getRuleContext<ViperLangParser::Call_expressionContext>(0);
}

tree::TerminalNode* ViperLangParser::ExpressionContext::NAME() {
  return getToken(ViperLangParser::NAME, 0);
}

tree::TerminalNode* ViperLangParser::ExpressionContext::INT() {
  return getToken(ViperLangParser::INT, 0);
}

std::vector<ViperLangParser::ExpressionContext *> ViperLangParser::ExpressionContext::expression() {
  return getRuleContexts<ViperLangParser::ExpressionContext>();
}

ViperLangParser::ExpressionContext* ViperLangParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<ViperLangParser::ExpressionContext>(i);
}


size_t ViperLangParser::ExpressionContext::getRuleIndex() const {
  return ViperLangParser::RuleExpression;
}

void ViperLangParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void ViperLangParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


std::any ViperLangParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


ViperLangParser::ExpressionContext* ViperLangParser::expression() {
   return expression(0);
}

ViperLangParser::ExpressionContext* ViperLangParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ViperLangParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  ViperLangParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, ViperLangParser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(99);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(96);
      call_expression();
      break;
    }

    case 2: {
      setState(97);
      match(ViperLangParser::NAME);
      break;
    }

    case 3: {
      setState(98);
      match(ViperLangParser::INT);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(109);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(107);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(101);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(102);
          _la = _input->LA(1);
          if (!(_la == ViperLangParser::T__9

          || _la == ViperLangParser::T__12)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(103);
          expression(5);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(104);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(105);
          _la = _input->LA(1);
          if (!(_la == ViperLangParser::T__13

          || _la == ViperLangParser::T__14)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(106);
          expression(4);
          break;
        }

        default:
          break;
        } 
      }
      setState(111);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- If_statementContext ------------------------------------------------------------------

ViperLangParser::If_statementContext::If_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ViperLangParser::Condition_expressionContext* ViperLangParser::If_statementContext::condition_expression() {
  return getRuleContext<ViperLangParser::Condition_expressionContext>(0);
}

std::vector<ViperLangParser::StatementContext *> ViperLangParser::If_statementContext::statement() {
  return getRuleContexts<ViperLangParser::StatementContext>();
}

ViperLangParser::StatementContext* ViperLangParser::If_statementContext::statement(size_t i) {
  return getRuleContext<ViperLangParser::StatementContext>(i);
}


size_t ViperLangParser::If_statementContext::getRuleIndex() const {
  return ViperLangParser::RuleIf_statement;
}

void ViperLangParser::If_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_statement(this);
}

void ViperLangParser::If_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_statement(this);
}


std::any ViperLangParser::If_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitIf_statement(this);
  else
    return visitor->visitChildren(this);
}

ViperLangParser::If_statementContext* ViperLangParser::if_statement() {
  If_statementContext *_localctx = _tracker.createInstance<If_statementContext>(_ctx, getState());
  enterRule(_localctx, 14, ViperLangParser::RuleIf_statement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    match(ViperLangParser::T__15);
    setState(113);
    match(ViperLangParser::T__1);
    setState(114);
    condition_expression(0);
    setState(115);
    match(ViperLangParser::T__3);
    setState(119);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 6356992) != 0)) {
      setState(116);
      statement();
      setState(121);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(122);
    match(ViperLangParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Condition_expressionContext ------------------------------------------------------------------

ViperLangParser::Condition_expressionContext::Condition_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ViperLangParser::ExpressionContext *> ViperLangParser::Condition_expressionContext::expression() {
  return getRuleContexts<ViperLangParser::ExpressionContext>();
}

ViperLangParser::ExpressionContext* ViperLangParser::Condition_expressionContext::expression(size_t i) {
  return getRuleContext<ViperLangParser::ExpressionContext>(i);
}

std::vector<ViperLangParser::Condition_expressionContext *> ViperLangParser::Condition_expressionContext::condition_expression() {
  return getRuleContexts<ViperLangParser::Condition_expressionContext>();
}

ViperLangParser::Condition_expressionContext* ViperLangParser::Condition_expressionContext::condition_expression(size_t i) {
  return getRuleContext<ViperLangParser::Condition_expressionContext>(i);
}


size_t ViperLangParser::Condition_expressionContext::getRuleIndex() const {
  return ViperLangParser::RuleCondition_expression;
}

void ViperLangParser::Condition_expressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondition_expression(this);
}

void ViperLangParser::Condition_expressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ViperLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondition_expression(this);
}


std::any ViperLangParser::Condition_expressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ViperLangVisitor*>(visitor))
    return parserVisitor->visitCondition_expression(this);
  else
    return visitor->visitChildren(this);
}


ViperLangParser::Condition_expressionContext* ViperLangParser::condition_expression() {
   return condition_expression(0);
}
